--- a/docs/docusaurus/src/css/custom.scss
+++ b/docs/docusaurus/src/css/custom.scss
@@ -123,6 +123,7 @@ h3 {
 
 [data-theme='dark'] .markdown img{
   background-color: var(--white);
+  margin: 0.5rem
 }
 
 .docusaurus-highlight-code-line {
